2007-10-10  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	Recommitting patch by Dalibor Topic from 2007-09-21.
	* java/lang/management/ThreadInfo.java:
	Removed unused private constructors.

2007-10-09  Mario Torre  <neugens@limasoftware.net>

	* README.gstreamer: new file.

2007-10-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/33623:
	* examples/Makefile.am:
	Exit with no compiler.
	* lib/Makefile.am: Likewise.
	* m4/acinclude.m4: Handle ecj and javac
	using separate variables and catch when JAVAC/ECJ is
	empty.
	
2007-10-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/23854:
	* java/util/zip/ZipEntry.java:
	(parseExtra()): Pass time to setTime in milliseconds
	rather than seconds by multiplying by 1000.
	
2007-09-27  Mario Torre  <neugens@limasoftware.net>

	* gnu/javax/sound/sampled/gstreamer/io/GstAudioFileReaderNativePeer.java:
	(gstreamer_get_audio_format_stream): Removed parameter from javadoc.
	(gstreamer_get_audio_format_file): likewise.
	* gnu/javax/sound/sampled/gstreamer/lines/GstPipeline.java:
	Added class javadoc and implementation notes.
	(READ): new constant.
	(WRITE): likewise.
	(QUEUED): likewise.
	(CAPACITY_KEY): likewise.
	(lock): likewise.
	(prefs): new variable.
	(GstPipeline constructor): added OS independent rutines to detect
	filesystem pipes size plus save and restores this information via
	preferences. Now closes open pipe on user abort at VM exit.
	(open_native_pipe): new native method.
	(close_native_pipe): likewise.
	(detect_pipe_size): likewise.
	(createForWrite): update to use new native methods.
	(setState): removed hack to synchronize reading and writing of the
	filesystme named pipe.
	(available): implemented.
	(drain): new implementation, now correctly waits for data to be consumed
	in the pipeline.
	(prepareWrite): removed hack to synchronize reading and writing of the
	filesystme named pipe.
	(CleanPipeline): new inner class, used for cleaning of native pipelines